--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,6 +43,9 @@
   src: url(../RESOURCES/FONTS/Staatliches-Regular.ttf);
 }
 
+/* Hacer los hovers de las imagenes de la cartelera al tamanio que son, 
+arreglar lo de las salas */
+
 html {
   display: flex;
   flex-direction: column;
@@ -1436,7 +1439,7 @@ form textarea:not(:placeholder-shown)~label {
 
   .trailer {
     width: 300px !important;
-    height: 200px !important;
+    height: 210px !important;
   }
 
   h2.super,
