--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,9 +43,7 @@
   src: url(../RESOURCES/FONTS/Staatliches-Regular.ttf);
 }
 
-/* Falta revisar elementos que tengan delcaraciones que no funcionen para eliminarlas
-estructurar y ordenar el css y aniadir una animacion al boton del formulario para 
-cuando le den y haya errores.*/
+/* -----------------------------------Ajustes-Basicos-Y-Cartelera-------------------------------------------------- */
 
 html {
   display: flex;
@@ -55,9 +53,11 @@ html {
 }
 
 body:not(body.sala1, body.sala2, body.sala3) {
+  width: 100%;
   margin: 0;
   background-color: black;
   display: flex;
+  justify-content: space-evenly;
   flex-direction: column;
 }
 
@@ -87,7 +87,6 @@ body:not(body.sala1, body.sala2, body.sala3)::before {
   flex-direction: column;
   margin: 0 20vw;
   position: relative;
-  justify-content: center;
   align-items: center;
 }
 
@@ -363,16 +362,7 @@ h2:hover {
   filter: brightness(75%);
 }
 
-.promociones {
-  display: flex;
-  justify-content: center;
-  height: 400px;
-}
-
-.menus {
-  display: flex;
-  height: 400px;
-}
+/* -----------------------------------Paginas-Peliculas---------------------------------------------------- */
 
 h2.super,
 h2.dungeon,
@@ -455,36 +445,6 @@ div.horarios {
 
 .tituloHorarios {
   text-align: center;
-}
-
-footer {
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-size: 24px;
-  font-family: 'Bungee';
-  color: rgba(0, 38, 93, 100%);
-  width: 100%;
-  height: 150px;
-  background-image: linear-gradient(225deg,
-      rgba(0, 0, 0, 255) 0%,
-      rgba(0, 36, 89, 255) 33%,
-      rgba(252, 252, 252, 255) 80%);
-  ;
-  margin-top: 5%;
-  bottom: 0;
-  z-index: 1;
-}
-
-footer a {
-  font-weight: bold;
-  color: white;
-}
-
-footer p {
-  margin: 0;
 }
 
 .descripcionPelicula {
@@ -575,6 +535,51 @@ footer p {
   font-weight: bolder;
 }
 
+/* -----------------------------------Footer---------------------------------------------------- */
+
+footer {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 24px;
+  font-family: 'Bungee';
+  color: rgba(0, 38, 93, 100%);
+  width: 100%;
+  height: 150px;
+  background-image: linear-gradient(225deg,
+      rgba(0, 0, 0, 255) 0%,
+      rgba(0, 36, 89, 255) 33%,
+      rgba(252, 252, 252, 255) 80%);
+  ;
+  margin-top: 5%;
+  bottom: 0;
+  z-index: 1;
+}
+
+footer a {
+  font-weight: bold;
+  color: white;
+}
+
+footer p {
+  margin: 0;
+}
+
+/* -----------------------------------Promociones---------------------------------------------------- */
+
+.promociones {
+  display: flex;
+  justify-content: center;
+  height: 400px;
+}
+
+.menus {
+  display: flex;
+  height: 400px;
+}
+
 .contenidoPromo {
   display: flex;
   flex-direction: column;
@@ -588,7 +593,7 @@ footer p {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 52vw;
+  width: 1000px;
 }
 
 .menus .carousel,
@@ -599,7 +604,7 @@ footer p {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 77vw;
+  width: 85vw;
 }
 
 .promociones .carouselSlider {
@@ -700,6 +705,8 @@ footer p {
     transform: translateX(-10%);
   }
 }
+
+/* -----------------------------------Salas---------------------------------------------------- */
 
 html.salas {
   display: grid;
@@ -1018,6 +1025,8 @@ body.sala3 {
   margin-left: 0.1%;
 }
 
+/* -----------------------------------PopUp---------------------------------------------------- */
+
 #popup-container {
   position: fixed;
   top: 0;
@@ -1090,6 +1099,8 @@ body.sala3 {
   margin: 0;
 }
 
+/* -----------------------------------Contacto y formulario---------------------------------------------------- */
+
 .espacioContacto {
   display: flex;
   width: 120%;
@@ -1135,6 +1146,24 @@ body.sala3 {
   font-size: 32px;
   cursor: pointer;
   border-radius: 15px;
+}
+
+#miFormulario:invalid .enviar:hover, #miFormulario:invalid .enviar:active {
+  animation: shakefix 1s linear infinite;
+}
+
+@keyframes shakefix {
+  0% { transform: translate(1px, 1px); }
+  10% { transform: translate(-1px, -2px); }
+  20% { transform: translate(-3px, 0px); }
+  30% { transform: translate(3px, 2px); }
+  40% { transform: translate(1px, -1px); }
+  50% { transform: translate(-1px, 2px); }
+  60% { transform: translate(-3px, 1px); }
+  70% { transform: translate(3px, 1px); }
+  80% { transform: translate(-1px, -1px); }
+  90% { transform: translate(1px, 2px); }
+  100% { transform: translate(1px, -2px); }
 }
 
 form input,
@@ -1233,7 +1262,13 @@ form textarea:not(:placeholder-shown)~label {
   -webkit-text-stroke: .1px black;
 }
 
+/* -----------------------------------Media-Queries---------------------------------------------------- */
+
 @media screen and (max-width: 530px) {
+  .menuses body:not(body.sala1, body.sala2, body.sala3) {
+    height: 100%;
+  }
+
   #web {
     margin: 0;
   }
@@ -1247,11 +1282,12 @@ form textarea:not(:placeholder-shown)~label {
   #head a {
     display: flex;
     align-items: center;
+    height: 12.5vh;
   }
 
   #head h1 {
     margin: 5%;
-    margin-top: 20%;
+    margin-top: 40px;
     font-size: 24px;
   }
 
@@ -1262,10 +1298,6 @@ form textarea:not(:placeholder-shown)~label {
   #head nav a {
     text-align: center;
     font-size: 12px;
-  }
-
-  #head h1 {
-    margin-top: 25px;
   }
 
   #head nav {
@@ -1444,6 +1476,7 @@ form textarea:not(:placeholder-shown)~label {
 @media screen and (min-width: 531px) and (max-width: 790px) {
   #web {
     margin: 0;
+    
   }
 
   #head {
@@ -1454,7 +1487,7 @@ form textarea:not(:placeholder-shown)~label {
 
   #head h1 {
     margin: 5%;
-    margin-top: 15%;
+    margin-top: 10%;
     font-size: 32px;
   }
 
@@ -1642,7 +1675,7 @@ form textarea:not(:placeholder-shown)~label {
 
   #head h1 {
     margin: 5%;
-    margin-top: 12.5%;
+    margin-top: 10%;
     font-size: 36px;
   }
 
@@ -1826,7 +1859,7 @@ form textarea:not(:placeholder-shown)~label {
 
   #head h1 {
     margin: 5%;
-    margin-top: 12.5%;
+    margin-top: 7.5%;
     font-size: 40px;
   }
 
@@ -1997,6 +2030,11 @@ form textarea:not(:placeholder-shown)~label {
 
   #cartelera {
     width: 100%;
+  }
+
+  #head h1 {
+    margin-top: 6%;
+    font-size: 35px;
   }
 
   footer {
