--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,6 +52,21 @@ html {
   height: 100vh;
 }
 
+.apertura{
+  background-color: rgba(0, 38, 93, 75%);
+  width: 100vw;
+  text-align: center;
+}
+
+h1{
+  margin: 0;
+  letter-spacing: 2px;
+  color: white;
+  font-size: 28px;
+  padding: 0.5%;
+  font-family: "Orbitron";
+}
+
 body:not(body.sala1, body.sala2, body.sala3) {
   width: 100%;
   margin: 0;
@@ -110,7 +125,9 @@ body:not(body.sala1, body.sala2, body.sala3)::before {
 }
 
 #head h1 {
-  margin-top: 50px;
+  color: black;
+  padding: 0;
+  margin-top: 40px;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -1529,6 +1546,10 @@ form textarea:not(:placeholder-shown):invalid~label {
     height: 25px;
   }
 
+  h1{
+    padding: 1%;
+    font-size: 12px;
+  }
 }
 
 @media screen and (min-width: 531px) and (max-width: 790px) {
@@ -1718,6 +1739,10 @@ form textarea:not(:placeholder-shown):invalid~label {
     right: -2% !important;
   }
 
+  h1{
+    padding: 1%;
+    font-size: 18px;
+  }
 }
 
 @media screen and (min-width: 791px) and (max-width: 925px) {
@@ -1901,6 +1926,10 @@ form textarea:not(:placeholder-shown):invalid~label {
     height: 75px;
   }
 
+  h1{
+    padding: 1%;
+    font-size: 24px;
+  }
 }
 
 @media screen and (min-width: 926px) and (max-width: 1250px) {
@@ -2082,6 +2111,10 @@ form textarea:not(:placeholder-shown):invalid~label {
     zoom: 55%;
   }
 
+  h1{
+    padding: 1%;
+    font-size: 24px;
+  }
 }
 
 @media screen and (min-width: 1251px) and (max-width: 1562px) {
@@ -2181,4 +2214,8 @@ form textarea:not(:placeholder-shown):invalid~label {
     zoom: 65%;
   }
 
+  h1{
+    padding: 0.5%;
+    font-size: 28px;
+  }
 }
