--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1058,6 +1058,8 @@ body.sala3 {
 }
 
 #popup-content {
+  display: flex;
+  justify-content: center;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1065,6 +1067,10 @@ body.sala3 {
   height: 90vh;
   width: 90vw;
   overflow: hidden;
+}
+
+#popup-content img{
+  max-width: 100%;
 }
 
 #popup-content iframe {
@@ -1091,8 +1097,8 @@ body.sala3 {
 
 #popup-content button {
   position: absolute;
-  top: 0%;
-  right: 0%;
+  top: -2%;
+  right: -1%;
   background-color: rgba(0, 0, 0, 0);
   border: none;
   cursor: pointer;
@@ -1546,6 +1552,11 @@ form textarea:not(:placeholder-shown):invalid~label {
     height: 25px;
   }
 
+  #popup-content button{
+    top: -1%;
+    right: -2%;
+  }
+
   h1{
     padding: 1%;
     font-size: 12px;
@@ -1730,8 +1741,8 @@ form textarea:not(:placeholder-shown):invalid~label {
   }
 
   #popup-content button img {
-    width: 65px;
-    height: 65px;
+    width: 45px;
+    height: 45px;
   }
 
   #popup-content button {
@@ -1922,8 +1933,13 @@ form textarea:not(:placeholder-shown):invalid~label {
   }
 
   #popup-content button img {
-    width: 75px;
-    height: 75px;
+    width: 65px;
+    height: 65px;
+  }
+
+  #popup-content button{
+    top: -2%;
+    right: -2%;
   }
 
   h1{
@@ -2098,8 +2114,8 @@ form textarea:not(:placeholder-shown):invalid~label {
 
 
   #popup-content button {
-    top: 0% !important;
-    right: 0% !important;
+    top: -2% !important;
+    right: -1.5% !important;
   }
 
   #popup-content button img {
@@ -2201,8 +2217,8 @@ form textarea:not(:placeholder-shown):invalid~label {
   }
 
   #popup-content button {
-    top: 0% !important;
-    right: 0% !important;
+    top: -2% !important;
+    right: -1.5% !important;
   }
 
   #popup-content button img {
